// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut Progress over 1 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    120
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm iDUDqt"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Progress under 1 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    -90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm eiYfKP"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots No props 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    0
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm cXZelI"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots Progress 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm fanwX"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots Progress&WarningTreshold 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    70
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm cUtrhg"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut With children 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm fanwX"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut invalid progress 1`] = `
<svg
  className="sc-bdfBwQ dYXJBV"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    0
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-gsTCUz fEWccD"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-dlfnbm cXZelI"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;
